--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-body{
+body {
     margin: 0;
     padding: 0;
     height: 100vh;
@@ -9,6 +9,7 @@ body{
     font-family: "Montserrat", sans-serif;
     background-image: url(../img/background.jpg);
 }
+
 .flex-box {
     position: absolute;
     top: 50%;
@@ -42,8 +43,11 @@ body{
     background-color: rgba(2, 2, 31, 0.473);
     color: #f5f5f5;
     border-radius: 20px;
+    align-items: center;
 }
+
 .marcador input {
+    transform: scale(1.3);
     cursor: pointer;
     accent-color: orange;
 }
@@ -61,20 +65,23 @@ body{
     justify-content: center;
     width: 350px;
     background-color: #f5f5f5;
-    border-radius:  0px 0px 0px 15px;
+    border-radius: 0px 0px 0px 15px;
 }
+
 .posicao {
     position: fixed;
     top: 0%;
     right: 0%;
 
 }
+
 .error button {
     width: 60px;
     height: all;
     font-size: 15px;
     cursor: pointer;
 }
+
 /*fim da mensagem de erro*/
 
 
@@ -86,6 +93,7 @@ body{
     background-color: rgba(2, 2, 31, 0.473);
     color: #f5f5f5;
     border-radius: 20px;
+    height: 12rem;
 }
 
 .crono h1 {
@@ -107,18 +115,27 @@ body{
     cursor: pointer;
 }
 
-#pauseBtn, #resumeBtn{
+#pauseBtn,
+#resumeBtn,
+#startBtn1,
+#startBtn2 {
     display: none;
+}
+
+#rest {
+    padding: 2%;
+    font-size: 1.2rem;
 }
 
 .footer {
     position: fixed;
     bottom: 0%;
     left: 50%;
-    transform: translate(-50%, -50% );
+    transform: translate(-50%, -50%);
     align-items: center;
     text-align: center;
 }
+
 .footer a img {
     width: 80px;
 }
